--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -50,5 +50,16 @@
     .youtube {
       background: #c4302b;
     }
+
+    @media screen and (max-width: 767px) {
+      flex-direction: column;
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    h3 {
+      display: flex;
+      flex-direction: column;
+    }
   }
 }
