--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -629,18 +629,30 @@ h1 {
   color: #fff;
   font-family: "Poppins", sans-serif;
   font-size: 100px;
+
+  @media screen and (max-width: 767px) {
+    font-size: 50px;
+  }
 }
 
 h2 {
   color: #fff;
   font-family: "Poppins", sans-serif;
   font-size: 100px;
+
+  @media screen and (max-width: 767px) {
+    font-size: 50px;
+  }
 }
 
 h3 {
   font-size: 50px;
   color: #fff;
   font-family: "Poppins", sans-serif;
+
+  @media screen and (max-width: 767px) {
+    font-size: 24px;
+  }
 }
 
 h4 {
