--- a/src/components/archive_signup/archive-signup.scss
+++ b/src/components/archive_signup/archive-signup.scss
@@ -17,7 +17,7 @@
   }
 
   .logo {
-    margin-top: 50px;
+    margin-top: 25px;
   }
 
   form {
@@ -34,6 +34,7 @@
     input {
       padding: 15px;
       font-size: 25px;
+      line-height: 25px;
       text-align: center;
       font-family: "poppins", sans-serif;
 
@@ -50,5 +51,20 @@
       padding: 15px;
       font-family: "poppins", sans-serif;
     }
+  }
+
+  .form-info-div {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #error-msg {
+    max-width: 350px;
+    font-size: 16px;
+    color: red;
+    font-family: "poppins", sans-serif;
+    margin-top: 25px;
+    margin-bottom: -25px;
+    display: none;
   }
 }
