--- a/src/components/archive_signup/archive-signup.scss
+++ b/src/components/archive_signup/archive-signup.scss
@@ -32,7 +32,7 @@
     }
 
     input {
-      padding: 15px;
+      padding: 10px;
       font-size: 25px;
       line-height: 25px;
       text-align: center;
@@ -65,6 +65,14 @@
     font-family: "poppins", sans-serif;
     margin-top: 25px;
     margin-bottom: -25px;
+    display: none;
+  }
+
+  #thanks {
+    max-width: 350px;
+    background: #3bb99b;
+    color: white;
+    font-family: "poppins", sans-serif;
     display: none;
   }
 }
