--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -693,5 +693,13 @@ footer {
   p {
     margin-bottom: 25px;
     margin-top: 25px;
+    font-size: 16px;
+    width: 225px;
+    text-align: center;
+  }
+
+  a {
+    color: white;
+    text-decoration: none;
   }
 }
