--- a/src/components/archive_signup/archive-signup.scss
+++ b/src/components/archive_signup/archive-signup.scss
@@ -79,4 +79,16 @@
       margin-top: 1.45rem;
     }
   }
+
+  @media screen and (max-width: 767px) {
+    h1 {
+      font-size: 35px;
+      padding: 0 25px;
+    }
+
+    .archive-signup-lp form {
+      padding: 50px 30px;
+      max-width: 100%;
+    }
+  }
 }
