added privacy policy

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -711,3 +711,13 @@ footer {
     margin-top: 0px;
   }
 }
+
+.privacy-policy {
+  color: white;
+  max-width: 80%;
+  margin: auto;
+
+  a {
+    color: white;
+  }
+}
