fixed style bug

--- a/src/components/archive_signup/archive-signup.scss
+++ b/src/components/archive_signup/archive-signup.scss
@@ -86,7 +86,7 @@
       padding: 0 25px;
     }
 
-    .archive-signup-lp form {
+    form {
       padding: 50px 30px;
       max-width: 100%;
     }
