--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -658,13 +658,21 @@ h3 {
 h4 {
   color: #fff;
   font-family: "Poppins", sans-serif;
-  font-size: 24px;
+  font-size: 35px;
 }
 
 h5 {
   color: #fff;
   font-family: "Poppins", sans-serif;
   font-size: 24px;
+}
+
+p,a {
+  font-family: "poppins", sans-serif;
+}
+
+.mint-green {
+  color: #3bb99b;
 }
 
 /*******************/
@@ -719,5 +727,96 @@ footer {
 
   a {
     color: white;
+  }
+}
+
+.btn-style-1 {
+  margin-top: 30px;
+  background: #3bb99b;
+  border: none;
+  color: white;
+  padding: 15px;
+  font-family: "poppins", sans-serif;
+}
+
+/*******************/
+/*******Main********/
+/*******************/
+
+.index-hero {
+  background: #282c34;
+  background-size: cover;
+  text-align: center;
+  padding: 200px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 100vh;
+  position: relative;
+
+  .logo {
+    position: absolute;
+    top: 5vh;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
+
+  .down-arrows {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 25px;
+  }
+}
+
+h1 {
+  padding-top: 75px;
+}
+
+.page-title {
+  padding-top: 75px;
+}
+
+.project-previews {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  max-width: 90%;
+  margin: auto;
+  margin-top: 50px;
+}
+
+.portfolio-link {
+  background: #3bb99b;
+  color: white;
+  position: absolute;
+  left: 5%;
+  top: 0;
+  border-radius: 0 0 10px 10px;
+  padding: 10px 20px;
+  animation: dropDown 1s;
+  p {
+    margin-bottom: 0;
+  }
+
+  a {
+    color: white;
+    font-weight: 500;
+  }
+}
+
+@keyframes dropDown {
+  0% {
+    top: -200px;
+  }
+
+  66% {
+    top: -200px;
+  }
+
+  100% {
+    top: 0px;
   }
 }
