--- a/src/components/portfolio/hero/hero.scss
+++ b/src/components/portfolio/hero/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: url("../../images/hero.png") no-repeat center center;
+  background: url("../../../images/hero.png") no-repeat center center;
   background-size: cover;
   text-align: center;
   padding: 200px 0;
