--- a/src/components/portfolio/project/project.scss
+++ b/src/components/portfolio/project/project.scss
@@ -62,6 +62,12 @@
         }
       }
 
+      @media screen and (max-width: 767px) {
+        &:last-child {
+          margin-top: 0px;
+        }
+      }
+
       &:hover {
         background: darken(#3bb99b, 10%);
       }
