created mailingListSignupComponent and resume-template lp

--- a/src/components/mailing_list_signup/mailing-list-signup.scss
+++ b/src/components/mailing_list_signup/mailing-list-signup.scss
@@ -1,4 +1,4 @@
-.archive-signup-lp {
+.mailing-list-signup {
   background: url("../../images/hero.png") no-repeat center center;
   background-size: cover;
   text-align: center;
@@ -14,6 +14,7 @@
     font-size: 50px;
     max-width: 650px;
     margin-top: 25px;
+    padding-top: 0;
   }
 
   .logo {
