--- a/src/components/mailing_list_signup/mailing-list-signup.scss
+++ b/src/components/mailing_list_signup/mailing-list-signup.scss
@@ -32,6 +32,30 @@
       display: none;
     }
 
+    .optin-box {
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      margin-top: 10px;
+    }
+
+    input[type="checkbox"] {
+      height: 25px;
+      width: 25px;
+    }
+
+    #optin-label {
+      margin-left: 10px;
+      text-align: left;
+      display: inline-block;
+      font-size: 14px;
+      line-height: 18px;
+      color: white;
+      font-family: "poppins", sans-serif;
+      max-width: 310px;
+      white-space: normal;
+    }
+
     input {
       padding: 10px;
       font-size: 25px;
