--- a/src/templates/project_detailed_view/project-detailed-view.scss
+++ b/src/templates/project_detailed_view/project-detailed-view.scss
@@ -62,7 +62,7 @@
       }
     }
 
-    a.demo-btn {
+    .demo-btn {
       margin-top: 50px;
       display: inline-block;
       border-radius: 10px;
@@ -70,6 +70,7 @@
       min-width: 300px;
       font-size: 24px;
       transition-duration: 0.25s;
+      cursor: pointer;
       &:hover {
         background: darken(#3bb99b, 20%);
       }
