--- a/src/components/sign_up_screen/sign-up-screen.scss
+++ b/src/components/sign_up_screen/sign-up-screen.scss
@@ -14,7 +14,7 @@
     font-size: 50px;
     max-width: 650px;
     margin-top: 25px;
-    padding-top: 0;
+    padding-top: 86px;
   }
 
   .logo {
@@ -29,6 +29,19 @@
     margin-top: 25px;
 
     label {
+      display: none;
+    }
+
+    .email-error {
+      color: #e82525;
+      font-weight: 500;
+      -webkit-font-smoothing: antialiased;
+      border: solid #e82525 1px;
+      max-width: 330px;
+      margin: auto;
+      margin-top: 10px;
+      padding: 10px 15px;
+      text-rendering: optimizeLegibility;
       display: none;
     }
 
