--- a/src/components/project_card/project-card.scss
+++ b/src/components/project_card/project-card.scss
@@ -5,6 +5,7 @@
   margin-bottom: 50px;
   position: relative;
   padding-bottom: 75px;
+  box-shadow: 0px 0px 20px 0px rgba(7, 5, 9, 0.26);
 
   @media screen and (max-width: 1224px) {
     flex-basis: 45%;
