--- a/src/components/mailing_list_signup/mailing-list-signup.scss
+++ b/src/components/mailing_list_signup/mailing-list-signup.scss
@@ -9,6 +9,7 @@
   min-height: 100vh;
   position: relative;
   padding-bottom: 100px;
+  padding-top: 88px;
 
   h1 {
     font-size: 50px;
@@ -27,10 +28,6 @@
     flex-direction: column;
     padding: 50px 100px;
     margin-top: 25px;
-
-    label {
-      display: none;
-    }
 
     .optin-box {
       display: flex;
@@ -62,6 +59,7 @@
       line-height: 25px;
       text-align: center;
       font-family: "poppins", sans-serif;
+      width: 100%;
 
       &.margin-top-input {
         margin-top: 30px;
