--- a/src/components/sign_up_screen/sign-up-screen.scss
+++ b/src/components/sign_up_screen/sign-up-screen.scss
@@ -1,4 +1,4 @@
-.mailing-list-signup {
+.signup-screen {
   background: url("../../images/hero.png") no-repeat center center;
   background-size: cover;
   text-align: center;
@@ -27,10 +27,6 @@
     flex-direction: column;
     padding: 50px 100px;
     margin-top: 25px;
-
-    label {
-      display: none;
-    }
 
     .email-error {
       color: #e82525;
