--- a/src/templates/project_detailed_view/project-detailed-view.scss
+++ b/src/templates/project_detailed_view/project-detailed-view.scss
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
+  position: relative;
 
   .background-image {
     background-size: cover;
@@ -42,6 +44,7 @@
     z-index: 9;
     position: relative;
     text-align: center;
+    padding-top: 125px;
 
     h1 {
       z-index: 9;
@@ -59,6 +62,59 @@
 
       @media screen and (max-width: 767px) {
         padding: 0 25px;
+      }
+    }
+
+    .plan-comparison {
+      display: flex;
+      justify-content: space-evenly;
+      margin-top: 50px;
+      margin-bottom: 100px;
+      max-width: 1500px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .plan-option {
+      flex-basis: 35%;
+      background: #3c3f58;
+      border: solid #3bb99b 2px;
+      border-radius: 25px;
+      padding: 25px 50px;
+
+      ul {
+        max-width: 220px;
+        margin: auto;
+        padding-left: 30px;
+        text-align: left;
+
+        li {
+          position: relative;
+
+          &:before {
+            content: url("../../svgs/check.svg");
+            position: absolute;
+            left: -35px;
+            top: 3px;
+          }
+
+          &.exclude:before {
+            content: url("../../svgs/x.svg");
+            position: absolute;
+            left: -35px;
+            top: 3px;
+          }
+        }
+
+        span {
+          display: block;
+          font-size: 14px;
+          padding-left: 20px;
+        }
+      }
+
+      a {
+        margin-top: 15px;
       }
     }
 
