--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -768,9 +768,11 @@ footer {
 
   &.transparent {
     background: rgba(0, 0, 0, 0.3);
-    margin-top: -84px;
     z-index: 9;
-    position: relative;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
     @media screen and (max-width: 767px) {
       margin-top: 0;
     }
