--- a/src/components/login_screen/login-screen.scss
+++ b/src/components/login_screen/login-screen.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   min-height: 100vh;
   position: relative;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   padding-top: 88px;
 
   h1 {
@@ -130,7 +130,11 @@
 
     form {
       padding: 50px 30px;
-      max-width: 100%;
+      max-width: 90%;
+
+      input {
+        max-width: 100%;
+      }
     }
   }
 }
