--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -918,7 +918,8 @@ h1 {
 }
 
 .page-title {
-  padding-top: 75px;
+  padding-top: 0px;
+  line-height: 60px;
 
   @media screen and (max-width: 1024px) {
     padding-top: 0px;
@@ -973,5 +974,28 @@ h1 {
 
   100% {
     top: 0px;
+  }
+}
+
+.tos {
+  max-width: 1224px;
+  margin-left: auto;
+  margin-right: auto;
+
+  h1 {
+    padding-top: 100px;
+    font-size: 60px;
+  }
+
+  h2 {
+    font-size: 60px;
+  }
+
+  p {
+    color: white;
+  }
+
+  a {
+    color: #3bb99b;
   }
 }
