--- a/src/components/project_card/project-card.scss
+++ b/src/components/project_card/project-card.scss
@@ -7,6 +7,31 @@
   padding-bottom: 75px;
   box-shadow: 0px 0px 20px 0px rgba(7, 5, 9, 0.26);
 
+  &.free:after {
+    content: "Free Project";
+    position: absolute;
+    font-family: "Poppins", sans-serif;
+    top: 25px;
+    right: -10px;
+    background: #3bb99b;
+    padding: 10px;
+    color: white;
+    border-radius: 10px 3px 0 10px;
+  }
+
+  &.free:before {
+    content: "Free";
+    position: absolute;
+    font-family: "Poppins", sans-serif;
+    top: 30px;
+    z-index: -1;
+    right: -10px;
+    background: #21725f;
+    padding: 10px;
+    color: #3bb99b;
+    border-radius: 0px 0 5px 0px;
+  }
+
   @media screen and (max-width: 1224px) {
     flex-basis: 45%;
   }
