--- a/src/templates/project_detailed_view/project-detailed-view.scss
+++ b/src/templates/project_detailed_view/project-detailed-view.scss
@@ -131,5 +131,11 @@
         }
       }
     }
+
+    .upgrade-subtext {
+      margin-top: -1.4rem;
+      font-size: 16px;
+      margin-bottom: 1.45rem;
+    }
   }
 }
