--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -785,6 +785,7 @@ footer {
   background: #3c3f58;
   position: relative;
   border-top: solid #3bb99b 2px;
+  flex-wrap: wrap;
 
   &.transparent {
     background: rgba(0, 0, 0, 0.3);
@@ -798,7 +799,12 @@ footer {
     }
   }
 
-  p {
+  .col-1 a {
+    margin-top: 10px;
+    display: inline-block;
+  }
+
+  .footer p {
     margin-bottom: 25px;
     margin-top: 25px;
     font-size: 14px;
@@ -829,6 +835,45 @@ footer {
     &.transparent {
       position: relative;
     }
+  }
+}
+
+socket {
+  display: flex;
+  width: 100%;
+  margin: auto;
+  margin-top: 25px;
+
+  div {
+    width: 1000px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+  }
+
+  .divider {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  p,
+  a {
+    font-size: 14px;
+    justify-content: space-between;
+  }
+
+  a:hover {
+    color: #3bb99b;
+  }
+
+  svg:hover path {
+    fill: #3bb99b;
+    transition: 0.25s;
+  }
+
+  svg {
+    margin-bottom: 0;
+    margin-left: 10px;
   }
 }
 
