--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -702,204 +702,12 @@ li {
 }
 
 /*******************/
-/******Nav Bar******/
-/*******************/
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 25px 5px;
-  align-items: center;
-  border-bottom: solid #3bb99b 2px;
-  position: fixed;
-  background: #282c34;
-  z-index: 10;
-  left: 0;
-  right: 0;
-
-  .logo {
-    max-height: 100%;
-    max-width: 75px;
-    margin: 0;
-  }
-
-  .login-btn {
-    color: #3bb99b;
-    text-decoration: none;
-    font-size: 16px;
-    font-family: "Poppins", sans-serif;
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-
-  .App-header .btn {
-    background: transparent;
-    border: none;
-    color: white;
-    font-family: Poppins;
-    cursor: pointer;
-  }
-
-  .login-text {
-    color: white;
-    text-decoration: none;
-  }
-
-  .nav-links {
-    max-width: 900px;
-    width: 80%;
-    display: flex;
-    justify-content: flex-end;
-
-    a,
-    .login-btn {
-      margin-left: 7%;
-    }
-
-    @media screen and (max-width: 1024px) {
-      width: 90%;
-    }
-
-    @media screen and (max-width: 767px) {
-      display: none;
-    }
-  }
-}
-
-/*******************/
 /******General******/
 /*******************/
 
 html body {
   background: #282c34;
   margin-right: 0 !important;
-}
-
-footer {
-  display: flex;
-  justify-content: space-evenly;
-  font-family: "Poppins", sans-serif;
-  align-items: center;
-  color: white;
-  background: #3c3f58;
-  position: relative;
-  border-top: solid #3bb99b 2px;
-  flex-wrap: wrap;
-
-  &.transparent {
-    background: rgba(0, 0, 0, 0.3);
-    z-index: 9;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    @media screen and (max-width: 767px) {
-      margin-top: 0;
-    }
-  }
-
-  .col-1 a {
-    margin-top: 10px;
-    display: inline-block;
-  }
-
-  .footer p {
-    margin-bottom: 25px;
-    margin-top: 25px;
-    font-size: 14px;
-    line-height: 16px;
-    width: 225px;
-    text-align: center;
-
-    @media screen and (max-width: 767px) {
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
-  }
-
-  a {
-    color: white;
-    text-decoration: none;
-  }
-
-  .manage-sub-btn {
-    background: transparent;
-    margin-top: 0;
-    padding-bottom: 0;
-  }
-
-  @media screen and (max-width: 767px) {
-    flex-direction: column;
-    margin-top: 0px;
-    &.transparent {
-      position: relative;
-    }
-  }
-}
-
-socket {
-  display: flex;
-  width: 100%;
-  margin: auto;
-  margin-top: 25px;
-
-  > div {
-    width: 1000px;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-  }
-
-  .divider {
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-
-  p,
-  a {
-    font-size: 14px;
-    justify-content: space-between;
-  }
-
-  a:hover {
-    color: #3bb99b;
-  }
-
-  svg:hover path {
-    fill: #3bb99b;
-    transition: 0.25s;
-  }
-
-  svg {
-    margin-bottom: 0;
-    margin-left: 10px;
-  }
-
-  @media screen and (max-width: 767px) {
-    > div {
-      display: block;
-      text-align: center;
-    }
-
-    .socials {
-      display: flex;
-      justify-content: center;
-    }
-
-    .socials a:first-child svg {
-      margin-left: 0;
-    }
-
-    .divider {
-      display: none;
-    }
-
-    a,
-    p {
-      display: block;
-    }
-  }
 }
 
 .privacy-policy {
@@ -939,7 +747,7 @@ socket {
 /*******************/
 
 .index-hero {
-  background: #282c34;
+  background: url("../../images/hero.png") no-repeat center center;
   background-size: cover;
   text-align: center;
   padding: 100px 0;
