--- a/src/pages/join-discord/account-created.scss
+++ b/src/pages/join-discord/account-created.scss
@@ -1,5 +1,5 @@
 .mailing-list-signup {
-  background: url("../images/hero.png") no-repeat center center;
+  background: url("../../images/hero.png") no-repeat center center;
   background-size: cover;
   text-align: center;
   display: flex;
