--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -249,7 +249,7 @@ h2 {
   color: inherit;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: bold;
+  font-weight: 500;
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
   line-height: 1.1;
@@ -642,6 +642,7 @@ h2 {
 
   @media screen and (max-width: 767px) {
     font-size: 50px;
+    text-align: center;
   }
 }
 
@@ -697,6 +698,10 @@ li {
   font-weight: 400;
 }
 
+.medium {
+  font-weight: 500;
+}
+
 .bold {
   font-weight: 700;
 }
@@ -736,10 +741,124 @@ html body {
   cursor: pointer;
   text-decoration: none;
   transition-duration: 0.25s;
+  z-index: 9;
 }
 
 .text-decoration-none {
   text-decoration: none;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.container {
+  max-width: 1310px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 50px;
+}
+
+.row {
+  display: flex;
+
+  @media screen and (max-width: 767px) {
+    display: block;
+  }
+}
+
+.col {
+  &.one-third {
+    width: 29%;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+
+  &.one-half {
+    width: 46%;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+
+  @media screen and (max-width: 767px) {
+    width: 90%;
+    margin-right: 5%;
+    margin-left: 5%;
+    &:not(:first-child) {
+      margin-top: 50px;
+    }
+  }
+}
+
+.margin-top-50 {
+  margin-top: 50px;
+}
+
+.margin-bottom-100 {
+  margin-bottom: 100px;
+}
+/*******************/
+
+.home {
+  .hero:after {
+    content: "";
+    background: linear-gradient(to bottom, transparent, #282c34);
+    height: 300px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 0;
+  }
+
+  .purple-container {
+    background: #707793;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 50px 100px 200px;
+    margin-left: auto;
+    flex-direction: column;
+    text-align: center;
+    width: 80%;
+
+    @media screen and (max-width: 767px) {
+      padding: 50px 25px;
+      // margin-top: 50px;
+      width: 100%;
+    }
+
+    .purple-container-inner {
+      max-width: 375px;
+    }
+  }
+
+  .section-1 {
+    padding-top: 75px;
+    img {
+      border-radius: 10px;
+      overflow: hidden;
+      width: 140%;
+      max-width: initial;
+
+      @media screen and (max-width: 767px) {
+        width: 100%;
+      }
+    }
+  }
 }
 
 /*******************/
@@ -747,7 +866,7 @@ html body {
 /*******************/
 
 .index-hero {
-  background: url("../../images/hero.png") no-repeat center center;
+  // background: url("../../images/hero.png") no-repeat center center;
   background-size: cover;
   text-align: center;
   padding: 100px 0;
@@ -763,7 +882,7 @@ html body {
   }
 
   @media screen and (max-width: 767px) {
-    padding: 200px 0 100px;
+    padding: 100px 0 100px;
     min-height: initial;
   }
 
@@ -805,6 +924,7 @@ h1 {
 
   @media screen and (max-width: 1024px) {
     padding-top: 0px;
+    line-height: 30px;
   }
 }
 
