added explainer video and michell btn effect

--- a/src/components/login_screen/login-screen.scss
+++ b/src/components/login_screen/login-screen.scss
@@ -73,13 +73,9 @@
     }
 
     button {
-      margin-top: 30px;
-      background: #3bb99b;
-      border: none;
-      color: white;
-      padding: 15px;
-      font-family: "poppins", sans-serif;
-      border-radius: 10px;
+      margin-left: initial;
+      margin-right: initial;
+      max-width: initial;
     }
 
     .other-options {
