--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -711,7 +711,7 @@ li {
 /*******************/
 
 html body {
-  background: #282c34;
+  background: linear-gradient(to bottom, #282c34 50%, #757575);
   margin-right: 0 !important;
 }
 
@@ -726,8 +726,13 @@ html body {
 }
 
 .btn-style-1 {
+  -webkit-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+  -moz-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+  -ms-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+  -o-transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+  transition: all 200ms cubic-bezier(0.39, 0.5, 0.15, 1.36);
+  background-color: transparent;
   margin-top: 30px;
-  background: #3bb99b;
   border: none;
   color: white;
   padding: 15px;
@@ -742,6 +747,16 @@ html body {
   text-decoration: none;
   transition-duration: 0.25s;
   z-index: 9;
+}
+
+.btn-style-1 {
+  box-shadow: rgb(59, 185, 155) 0 0px 0px 50px inset;
+  background: transparent;
+}
+
+.btn-style-1:hover {
+  box-shadow: rgb(59, 185, 155) 0 0px 0px 2px inset;
+  color: white;
 }
 
 .text-decoration-none {
@@ -823,6 +838,7 @@ html body {
     position: absolute;
     left: 0;
     bottom: 0;
+    pointer-events: none;
     z-index: 0;
   }
 
