adjusted styles for pw reset component

--- a/src/components/PasswordReset/styles.scss
+++ b/src/components/PasswordReset/styles.scss
@@ -93,6 +93,7 @@
     background: #3bb99b;
     color: white;
     padding: 0 30px;
+    border-radius: 10px;
     font-family: "poppins", sans-serif;
     p {
       margin-top: 1.45rem;
