--- a/src/components/NewUser/styles.scss
+++ b/src/components/NewUser/styles.scss
@@ -22,6 +22,11 @@
     margin-top: 25px;
   }
 
+  .confirmation-text {
+    max-width: 300px;
+    margin-bottom: 0;
+  }
+
   form {
     background: rgba(0, 0, 0, 0.3);
     display: flex;
